{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 20,
  "lineage": "30ecb6bf-5e93-d9cd-176b-e2edfe9fc5b3",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "show_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/publicIPAddresses/publicip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.19.237",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "publicip1",
            "resource_group_name": "mtc1",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/networkInterfaces/nic",
            "internal_domain_name_suffix": "wi2d1sty0euexbpybkgs111klh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.128.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/publicIPAddresses/publicip1",
                "subnet_id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1/subnets/sub1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-87-7E-86",
            "name": "nic",
            "private_ip_address": "10.0.128.4",
            "private_ip_addresses": [
              "10.0.128.4"
            ],
            "resource_group_name": "mtc1",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Compute/virtualMachines/vm"
          },
          "dependencies": [
            "azurerm_public_ip.publicip1",
            "azurerm_resource_group.mtc",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/networkSecurityGroups/sec",
            "location": "westeurope",
            "name": "sec",
            "resource_group_name": "mtc1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rules",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/networkSecurityGroups/sec/securityRules/rules",
            "name": "rules",
            "network_security_group_name": "sec",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sec",
            "azurerm_resource_group.mtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/publicIPAddresses/publicip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.19.237",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "publicip1",
            "resource_group_name": "mtc1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.128.0/18"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1/subnets/sub1",
            "name": "sub1",
            "resource_group_name": "mtc1",
            "virtual_network_name": "net1"
          },
          "dependencies": [
            "azurerm_resource_group.mtc",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1/subnets/sub1",
            "network_security_group_id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/networkSecurityGroups/sec",
            "subnet_id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1/subnets/sub1"
          },
          "dependencies": [
            "azurerm_network_security_group.sec",
            "azurerm_resource_group.mtc",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ca3d38b2-d178-4b28-85f8-0a8d2def6a5f",
            "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1",
            "location": "westeurope",
            "name": "net1",
            "resource_group_name": "mtc1",
            "subnet": [
              {
                "address_prefix": "10.0.128.0/18",
                "id": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/virtualNetworks/net1/subnets/sub1",
                "name": "sub1",
                "security_group": "/subscriptions/ca90491c-8924-4da5-b5e9-bc8f0129d6a5/resourceGroups/mtc1/providers/Microsoft.Network/networkSecurityGroups/sec"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc"
          ]
        }
      ]
    }
  ]
}